[gd_scene load_steps=15 format=3 uid="uid://bjxk4rhwrieef"]

[ext_resource type="Script" path="res://gd/image_panel.gd" id="1_grb1s"]
[ext_resource type="Texture2D" uid="uid://p2i17ea5rm1c" path="res://tex/UI_Ref/new.png" id="2_2tvhd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ysiu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grb1s"]
bg_color = Color(0.353486, 0.320321, 0.774979, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlgnd"]
bg_color = Color(0.353486, 0.320321, 0.774979, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3iiwd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5gkt"]
bg_color = Color(0.0077343, 0.0150599, 0.060468, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlgnd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3g4f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cq3ju"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cuhjs"]
bg_color = Color(0.353486, 0.320321, 0.774979, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_44xx4"]
bg_color = Color(0.353486, 0.320321, 0.774979, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iiwd"]
bg_color = Color(0.0164277, 0.0118096, 0.0852971, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_grb1s"]

[node name="image_panel" type="Window" groups=["img_panel"]]
initial_position = 1
size = Vector2i(796, 612)
visible = false
wrap_controls = true
exclusive = true
script = ExtResource("1_grb1s")

[node name="content" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="Top_Bar" type="HBoxContainer" parent="content"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="default" type="Button" parent="content/Top_Bar" groups=["button"]]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_2ysiu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_grb1s")
text = "默认尺寸"

[node name="edit" type="Button" parent="content/Top_Bar" groups=["button"]]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_2ysiu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlgnd")
toggle_mode = true
text = "编辑图片"

[node name="clip" type="Button" parent="content/Top_Bar" groups=["button"]]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_3iiwd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlgnd")
theme_override_styles/normal = SubResource("StyleBoxFlat_q5gkt")
toggle_mode = true
text = "框选尺寸"

[node name="keep_scale" type="CheckButton" parent="content/Top_Bar" groups=["button"]]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_nlgnd")
text = "  保持长宽比"
alignment = 1

[node name="stretch" type="CheckButton" parent="content/Top_Bar" groups=["button"]]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_2ysiu")
text = " 拉伸全屏"

[node name="Rect" type="HBoxContainer" parent="content"]
layout_mode = 2
mouse_filter = 2

[node name="Image" type="Panel" parent="content/Rect"]
clip_children = 2
custom_minimum_size = Vector2(632, 568)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j3g4f")

[node name="picture" type="TextureRect" parent="content/Rect/Image"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_2tvhd")
stretch_mode = 4

[node name="Slide_Bar" type="VBoxContainer" parent="content/Rect"]
layout_mode = 2
mouse_filter = 2

[node name="load_image" type="Button" parent="content/Rect/Slide_Bar" groups=["button"]]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_cq3ju")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cuhjs")
text = "加载图像"

[node name="confirm" type="Button" parent="content/Rect/Slide_Bar" groups=["button"]]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_cq3ju")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cuhjs")
text = "确认
"

[node name="cancel" type="Button" parent="content/Rect/Slide_Bar" groups=["button"]]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_cq3ju")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cuhjs")
text = "取消"

[node name="type" type="OptionButton" parent="content/Rect/Slide_Bar" groups=["type"]]
z_index = 2
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_constants/align_to_largest_stylebox = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_2ysiu")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_44xx4")
theme_override_styles/hover = SubResource("StyleBoxFlat_44xx4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_44xx4")
theme_override_styles/normal = SubResource("StyleBoxFlat_3iiwd")
selected = 0
item_count = 3
popup/item_0/text = "jpg"
popup/item_1/text = "png"
popup/item_1/id = 1
popup/item_2/text = "#SHP_目前不支持"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="shp_name" type="CheckButton" parent="content/Rect/Slide_Bar" groups=["button"]]
z_index = 2
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_2ysiu")
text = "支持shp编号"

[node name="detail" type="HBoxContainer" parent="content/Rect/Slide_Bar"]
layout_mode = 2

[node name="V" type="VSeparator" parent="content/Rect/Slide_Bar/detail"]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_grb1s")

[node name="label" type="Label" parent="content/Rect/Slide_Bar/detail" groups=["file_name"]]
z_index = 2
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "image0000.jpg"
autowrap_mode = 1

[node name="ScreenShot" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0

[node name="A" type="Marker2D" parent="ScreenShot"]
position = Vector2(200, 300)
gizmo_extents = 8.0
metadata/_edit_group_ = true

[node name="A" type="ColorRect" parent="ScreenShot/A"]
z_index = 1
custom_minimum_size = Vector2(12, 12)
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
color = Color(0.433333, 0.15, 1, 1)

[node name="D" type="Marker2D" parent="ScreenShot"]
position = Vector2(300, 400)
gizmo_extents = 8.0
metadata/_edit_group_ = true

[node name="D" type="ColorRect" parent="ScreenShot/D"]
z_index = 1
custom_minimum_size = Vector2(12, 12)
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
color = Color(0, 0.725, 0.87, 1)

[node name="quad" type="Line2D" parent="ScreenShot"]
points = PackedVector2Array(200, 300, 300, 300, 300, 400, 200, 400)
closed = true
width = 2.0
default_color = Color(0, 0.51941, 0.830042, 1)

[node name="mask" type="ColorRect" parent="ScreenShot"]
layout_mode = 2
offset_left = 200.0
offset_top = 300.0
offset_right = 300.0
offset_bottom = 400.0
color = Color(0, 0.53143, 0.871706, 0.203922)

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
force_native = true
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
